--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -208,6 +208,36 @@
   border: 0px;
 }
 
+.hint-point {
+  float: right;
+  background: #e75d5a;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 80%;
+  font-size: 0.75em;
+  line-height: 2;
+  text-align: center;
+  -webkit-animation: notificationpulse 1s infinite;
+}
+
+@-webkit-keyframes notificationpulse {
+  0% {
+    box-shadow: 0 0 0 0.00em #f74e41;
+  }
+  25% {
+    box-shadow: 0 0 0 0.25em #f74e41;
+  }
+  50% {
+    box-shadow: 0 0 0 0.50em #f74e41;
+  }
+  75% {
+    box-shadow: 0 0 0 0.25em #f74e41;
+  }
+  100% {
+    box-shadow: 0 0 0 0.15em #f74e41;
+  }
+}
+
 //body {
 //  background-color: #C5DDEB;
 //  text-align: center;
