--- a/app/views/homes/home.html.erb
+++ b/app/views/homes/home.html.erb
@@ -1,3 +1,6 @@
+<% unless current_user %>
+<%= render 'layouts/register_panel' %>
+<% end %>
 <div class="container-fluid">
   <header class="jumbotron hero-spacer">
     <h1>A Warm Welcome to Rails Chat!</h1>
@@ -7,7 +10,8 @@
       <% if current_user %>
           hello! <%= current_user.name %>
       <% else %>
-          <a href="#" class="btn btn-primary btn-large" id="login_panel"> Log in!</a>
+          <a href="#" class="btn btn-primary btn-large" id="login_panel"> Sign in!</a>
+          <a href="#" class="btn btn-primary btn-large" id="register_panel"> Sign up!</a>
       <% end %>
 
     </p>
