--- a/app/views/sync/messages/refetch/_message_row.html.erb
+++ b/app/views/sync/messages/refetch/_message_row.html.erb
@@ -1,8 +1,14 @@
 <li class="mar-btm">
+  <% if @chat.nil?&&chatroom_user_num(message.chat_id) < 3&&message.user.id!=current_user.id %>
+    <script>
+      $("div.speech-right").removeClass("speech-right").addClass("speech-read")
+    </script>
+  <% end %>
   <div class="media-<%= current_user.id==message.user.id ? 'right' : 'left' %>">
     <%= image_tag "user-icon.png", class: "img-sm" %>
   </div>
-  <div class="media-body pad-hor <%= "speech-right" if current_user.id==message.user.id %>">
+  <% read=read_or_not(message.chat_id, current_user.id, message.user.id, message.id) %>
+  <div class="media-body pad-hor <%= "speech-read" if read %> <%= "speech-right" if !read&&current_user.id==message.user.id %>">
     <div class="speech">
       <p class="media-heading"><%= current_user.id==message.user.id ? '我' : message.user.name %>
         <text class="speech-time">
