Production & Make Some Adjust

--- a/app/views/homes/home.html.erb
+++ b/app/views/homes/home.html.erb
@@ -35,7 +35,7 @@
     <li>新消息提示</li>
     <li>置顶与屏蔽</li>
     <li>已读未读的区分</li>
-    <li>后台管理</li>
+    <li>后台管理(在地址后加/admin)</li>
     
     <h3>
       TODO
