--- a/app/views/layouts/_login_panel.html.erb
+++ b/app/views/layouts/_login_panel.html.erb
@@ -27,9 +27,9 @@
               </div>
             </div>
 
-            <div class="checkbox">
+            <!--<div class="checkbox">
               <label><%= f.check_box :remember_me %>记住我</label>
-            </div>
+            </div>-->
 
             <%= button_tag(type: "submit", class: "btn btn-primary btn-block") do %>
                 <span class="glyphicon glyphicon-off"></span> 登陆
@@ -38,9 +38,9 @@
         <% end %>
       </div>
 
-      <div class="modal-footer">
+      <!--<div class="modal-footer">
         <p class="text-center">没有账号? 请联系管理员</p>
-      </div>
+      </div>-->
 
     </div>
 
