--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,6 @@
   <%= f.input :email, label: '邮箱：' %>
   <%= f.input :password, label: '密码：' %>
   <%= f.input :phonenumber, label: '电话：' %>
-  <%= f.input :sex, label: '性别：', collection: [['男', 'male'], ['女', 'female']], :include_blank => false %>
+  <%= f.input :sex, label: '性别：', collection: [['男', 'male'], ['女', 'female'], ['保密', 'secret']], :include_blank => false %>
   <%= f.button :submit, '更新信息' %>
 <% end %>
