--- a/app/assets/stylesheets/font-awesome.scss
+++ b/app/assets/stylesheets/font-awesome.scss
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: font_url('../fonts/fontawesome-webfont.eot');
-  src: font_url('../fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), font_url('../fonts/fontawesome-webfont.woff2') format('woff2'), font_url('../fonts/fontawesome-webfont.woff') format('woff'), font_url('../fonts/fontawesome-webfont.ttf') format('truetype'), font_url('../fonts/fontawesome-webfont.svg') format('svg');
+  src: font_url('fontawesome-webfont.eot');
+  src: font_url('fontawesome-webfont.eot?#iefix') format('embedded-opentype'), font_url('fontawesome-webfont.woff2') format('woff2'), font_url('fontawesome-webfont.woff') format('woff'), font_url('fontawesome-webfont.ttf') format('truetype'), font_url('fontawesome-webfont.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
